--- a/manifests/k8s/deployment.yaml
+++ b/manifests/k8s/deployment.yaml
@@ -1,4 +1,35 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: rustdesk
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: hbbs-pvc
+  namespace: rustdesk
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 5Gi
+  storageClassName: nfs-client
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: hbbr-pvc
+  namespace: rustdesk
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 5Gi
+  storageClassName: nfs-client
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -18,25 +49,39 @@ spec:
         app: rustdesk
         component: hbbs
     spec:
+      nodeSelector:
+        kubernetes.io/hostname: "worker0" # 限制 Pod 部署到 worker0
       containers:
         - name: hbbs
           image: rustdesk/rustdesk-server
           args: ["hbbs"]
           ports:
             - containerPort: 21115
+              hostPort: 21115
               protocol: TCP
             - containerPort: 21116
+              hostPort: 21116
               protocol: TCP
             - containerPort: 21116
+              hostPort: 21116
               protocol: UDP
             - containerPort: 21118
+              hostPort: 21118
               protocol: TCP
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "200m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
           volumeMounts:
             - mountPath: /root
               name: hbbs-storage
       volumes:
         - name: hbbs-storage
-          emptyDir: {}
+          persistentVolumeClaim:
+            claimName: hbbs-pvc
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -57,18 +102,30 @@ spec:
         app: rustdesk
         component: hbbr
     spec:
+      nodeSelector:
+        kubernetes.io/hostname: "worker0" # 限制 Pod 部署到 worker0
       containers:
         - name: hbbr
           image: rustdesk/rustdesk-server
           args: ["hbbr"]
           ports:
             - containerPort: 21117
+              hostPort: 21117
               protocol: TCP
             - containerPort: 21119
+              hostPort: 21119
               protocol: TCP
           volumeMounts:
             - mountPath: /root
               name: hbbr-storage
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "200m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
       volumes:
         - name: hbbr-storage
-          emptyDir: {}
+          persistentVolumeClaim:
+            claimName: hbbr-pvc
